--- a/main.css
+++ b/main.css
@@ -77,14 +77,17 @@ nav a:hover {
 .first-paragraph {   
     padding-bottom: 10px; /* Adds space inside the paragraph */
     margin-bottom: 1em;
+    text-align: justify;
 }
 .second.paragraph {
     padding-bottom: 10px; /* Adds space inside the paragraph */
     margin-bottom: 1em;
+    text-align: justify;
 }
 .third.paragrapj {
     padding-bottom: 10px; /* Adds space inside the paragraph */
     margin-bottom: 1em;
+    text-align: justify;
 }
 /* Ensure padding and border are accounted for */
 * {
