--- a/main.css
+++ b/main.css
@@ -167,7 +167,7 @@ body {
     position: relative; /* Ensures proper positioning of content */
     width: 100%;
     height: 100vh;
-    background-image:  url('TIMELINE-BG.png'); /* Path to your background image */
+    background-image:  url('ALT-TIMELINE-BG.png'); /* Path to your background image */
     background-size: cover; /* Makes sure the image covers the entire header */
     background-position: center; /* Centers the image */
     color: white; /* Makes the text white */
