--- a/main.css
+++ b/main.css
@@ -273,3 +273,38 @@ body {
     }
 }
 
+.section-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1; 
+    color: #10232d;
+    margin: 0;
+    display: block;
+    padding-top: 0; 
+}
+
+.sub-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 1; 
+    color: #10232d;
+    margin: 0;
+    display: block;
+    text-align: left;
+}
+
+.crispr-applications {
+    position: relative;
+    width: 100%;
+    height: auto; 
+    min-height: 100vh;
+    background-image: url('Application.png');
+    background-size: cover;
+    background-position: top center; 
+    padding: 60px 70px; 
+    text-align: left;
+    margin: 0;
+}
+
