--- a/main.css
+++ b/main.css
@@ -275,10 +275,10 @@ body {
 
 .section-title {
     font-family: 'Poppins', sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 1; 
-    color: #10232d;
+    color: #2C041D;
     margin: 0;
     display: block;
     padding-top: 0; 
@@ -286,10 +286,10 @@ body {
 
 .sub-title {
     font-family: 'Poppins', sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 1; 
-    color: #10232d;
+    color: #2C041D;
     margin: 0;
     display: block;
     text-align: left;
