--- a/main.css
+++ b/main.css
@@ -308,6 +308,67 @@ body {
     margin: 0;
 }
 
+.crispr-applications .container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    gap: 30px; 
+    margin-top: 40px;
+}
+
+.application-card {
+    background-color: #187086; 
+    border-radius: 10px;
+    padding: 20px;
+    color: #ffffff;
+    width: 100%; 
+    max-width: 800px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.application-card:hover {
+    background-color: #10232d; 
+    transform: scale(1.05); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5); 
+}
+
+.application-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px; 
+    font-weight: bold; 
+    margin: 0;
+    color: white; 
+    text-align: left;
+    transition: color 0.3s ease; 
+}
+
+.application-card:hover .application-title {
+    color: #ffd700; 
+}
+
+.application-content {
+    font-family: 'Poppins', sans-serif; 
+    margin-top: 10px;
+    font-size: 14px; 
+    color: #dddddd; 
+    text-align: left;
+}
+
+.application-card:hover .application-content ul li strong {
+    color: #ff7f50; 
+    transition: color 0.3s ease; 
+}
+
+@media (max-width: 768px) {
+    .crispr-applications .container {
+        padding: 20px;
+    }
+    .application-card {
+        width: 90%; 
+    }
+}
+
 /* Current Limitations Section */
 .crispr-challenges {
     background-color: #10232d;
