--- a/main.css
+++ b/main.css
@@ -278,7 +278,7 @@ body {
     font-size: 60px;
     font-weight: 700;
     line-height: 1; 
-    color: #2C041D;
+    color: white;
     margin: 0;
     display: block;
     padding-top: 0; 
@@ -289,10 +289,10 @@ body {
     font-size: 60px;
     font-weight: 700;
     line-height: 1; 
-    color: #2C041D;
+    color: white;
     margin: 0;
     display: block;
-    text-align: left;
+    text-align: center;
 }
 
 .crispr-applications {
@@ -335,7 +335,7 @@ body {
 
 .application-title {
     font-family: 'Poppins', sans-serif;
-    font-size: 16px; 
+    font-size: 20px; 
     font-weight: bold; 
     margin: 0;
     color: white; 
