--- a/main.css
+++ b/main.css
@@ -308,3 +308,199 @@ body {
     margin: 0;
 }
 
+/* chel-CQ10 Limitations draft */
+
+.page-entirety{
+    width: 100%;
+    height: 591.8px;
+    background-color: #0d1b2a;
+    display: grid;
+    grid-template-rows: repeat(28, 1fr);
+    grid-template-columns: repeat(19, 1fr);
+}
+
+.header-container{
+    grid-row-start: 3;
+    grid-row-end: 6;
+    grid-column-start: 2;
+    grid-column-end: 19;
+}
+
+#limitations-title{
+    font-family: 'Poppins', sans-serif;
+    font-size: 50px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    line-height: 1.2;
+}
+
+.description-container{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-row-start: 7;
+    grid-row-end: 9;
+    grid-column-start: 2;
+    grid-column-end: 19;
+}
+
+#limitations-description{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+}
+
+.card1-container{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-row-start: 11;
+    grid-row-end: 27;
+    grid-column-start: 2;
+    grid-column-end: 7;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.card1-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card1-container:hover img{
+    transform: scale(2.2);
+    transition: 0.5s ease-in-out;
+    opacity: 30%;
+}
+
+.card1-content{
+    height: 100%;
+    position: absolute;
+    text-align: center;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 65px;
+    font-family: 'Poppins', sans-serif;
+    opacity: 0;
+}
+
+.card1-content:hover {
+    opacity: 1;
+    transition: 0.4s ease-in-out;
+}
+
+.card2-container{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-row-start: 11;
+    grid-row-end: 27;
+    grid-column-start: 8;
+    grid-column-end: 13;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.card2-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card2-container:hover img{
+    transform: scale(2.2);
+    transition: 0.5s ease-in-out;
+    opacity: 30%;
+}
+
+.card2-content{
+    height: 100%;
+    position: absolute;
+    text-align: center;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 65px;
+    font-family: 'Poppins', sans-serif;
+    opacity: 0;
+}
+
+.card2-content:hover {
+    opacity: 1;
+    transition: 0.4s ease-in-out;
+}
+
+.card3-container{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
+    grid-row-start: 11;
+    grid-row-end: 27;
+    grid-column-start: 14;
+    grid-column-end: 19;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.card3-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card3-container:hover img{
+    transform: scale(2.2);
+    transition: 0.5s ease-in-out;
+    opacity: 30%;
+}
+
+.card3-content{
+    height: 100%;
+    position: absolute;
+    text-align: center;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 65px;
+    font-family: 'Poppins', sans-serif;
+    opacity: 0;
+}
+
+.card3-content:hover {
+    opacity: 1;
+    transition: 0.4s ease-in-out;
+}
+
+h4{
+    font-size: x-large;
+    margin-bottom: 10px;
+}
+
+p{
+    font-weight: 500;
+    font-size: medium;
+    margin: 0;
+}
