--- a/main.css
+++ b/main.css
@@ -300,7 +300,7 @@ body {
     width: 100%;
     height: auto; 
     min-height: 100vh;
-    background-image: url('Application.png');
+    background-image: url('UPDATED_HEADER_BG.png');
     background-size: cover;
     background-position: top center; 
     padding: 60px 70px; 
