--- a/main.css
+++ b/main.css
@@ -109,6 +109,13 @@ body {
     width: 100%;          
 }
 
+/* Icon*/
+.img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Styling for the boxes */
 .box {
     flex: 1 1 200px;     
