--- a/main.css
+++ b/main.css
@@ -590,7 +590,7 @@ p{
   max-height: 30%
 }
 
-.4.png {
+.4png {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -598,7 +598,7 @@ p{
   max-height: 30%
 }
 
-.5.png {
+.5png {
   display: block;
   margin-left: auto;
   margin-right: auto;
